# AgentBoosting

./: .gitignore  AGENTS_CHEATSHEET.md  CLAUDE_LOOP_template.md  CODEX_LOOP_template.md  LICENSE  README.md  pyproject.toml
bat/: _register.bat  _task_def.xml  _task_def_codex_fast.xml  auto_loop.bat  automatic.bat  ds_autostart_install.bat  ds_boot.bat  ds_daemon.bat  ds_task_start.bat  install_daemon.ps1  interaction.bat
config/: api_contract.json  session_routing.json  watch_dirs.json
docs/: SCOPE_active.md
modelboosting/: __init__.py  cli.py
watchdog/: .gitignore  auto_executor.py  auto_loop_global.py  code_quality_gate.py  codex_gate.py  config.json  context_injector.py  daemon_tick.py  deepseek_compensation.py  deepseek_gate.py  enforce.py  fix_mojibake.py  fs_watcher.py  model_detect.py  multi_pass_reason.py  req_expand.py  self_audit.py  set_mode.py
watchdog/hooks/: post_write.py  pre_write.py  session_start.py
